tests/bases/flux-app-v2/giantswarm/flux-multi-tenancy/flux-operator/safe-copy-from-annotation/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: safe-copy-from-annotation
policies:
  - ../../../resource-kyverno-policies.yaml
resources:
  - resources.yaml
results:
  - policy: flux-multi-tenancy
    rule: resourceSetCopyFromNamespaceIsSafe
    resources:
    - org-test-bad/test
    kind: ResourceSet
    result: fail
  - policy: flux-multi-tenancy
    rule: resourceSetCopyFromNamespaceIsSafe
    resources:
    - org-test-good/test
    kind: ResourceSet
    result: pass
